--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -107,7 +107,7 @@ jobs:
         run: |
           set -e
           npm ci --no-audit --no-fund || npm install --no-audit --no-fund
-          npm run build -- --mode production || npm run build || npm run build:prod
+          npm run build -- --mode production || npm run build
 
       - name: Detect FE_OUT
         run: |
